[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "pdftozpl"
version = "0.1.0"
description = "Minimal PDF to ZPL converter with CUPS filter support"
requires-python = ">=3.11"

[project.scripts]
pdftozpl = "pdftozpl.cli:main"
pdftozpl-filter = "pdftozpl.cli:filter_main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]